form : Fixed checkbox alignment and add pointer cursor

--- a/src/form.scss
+++ b/src/form.scss
@@ -131,6 +131,8 @@ input[type="checkbox"], input[type="radio"] {
     border: 1px solid currentColor;
     display: inline-grid;
     place-content: center;
+    vertical-align: middle;
+    cursor:pointer;
 }
 input[type="checkbox"] {border-radius: 4px;}
 input[type="checkbox"]:checked {
